--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,21 @@ h1 {
     border: 0;
 }
 
+.carousel-indicators{
+   position: unset;
+   padding: 30px 0px 10px 0px;
+   
+}
+
+.carousel-indicators [data-bs-target] {
+    background-color: #0A9697;
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+
+}
+
+
 .navbar{
     box-shadow: rgba(0, 0, 0, 0.085) 0px 3px 5px;
 }
@@ -88,7 +103,7 @@ h1 {
     background-color: #0A9697;
     background-position: center;
     background-size: cover;
-    margin: 70px 0px 70px 0px;
+    margin: 50px 0px 50px 0px;
     border-radius: 10px;
 
 }
